--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function getCountryCards(data){
                 );
         })
         .catch(function(){
-            console.log(err);
+            alert(err);
         })
     }
     
