--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ function getCountryCards(data){
 
                 );
         })
-        .catch(function(){
-            alert(err);
+        .catch(function(error){
+            alert(error);
         })
     }
     
