--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ data.then(function(res){
 function getCountryCards(data){
     for(let i=0;i<data.length;i++){
         var col=document.createElement("div");
-        col.setAttribute("class","col-3")
+        col.setAttribute("class","col-lg-3 col-sm-3")
         var div=document.createElement("div");
         div.setAttribute("class","card")
        
